using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class BossBattleBossInfo : MonoBehaviour
{
    public bool isMove;
    public bool isJump;
    public bool isSummonGuards;
    public bool isSummonRock;
    public bool isGunAttack;
    public bool isDroneAttack;
    public bool isDying;
}